Changes the service type in production and updates README

--- a/huggingface-gpt2/kustomize/kustomize_gpt2_prod.yaml
+++ b/huggingface-gpt2/kustomize/kustomize_gpt2_prod.yaml
@@ -11,7 +11,7 @@ spec:
     targetPort: 8000
   selector:
     name: gpt2-app
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: apps/v1
 kind: Deployment
